<resources>
    <string name="app_name">LGBTSwipe</string>
    <string name="hello_label">Привет! \n Кто ты по гендеру?</string>
    <string name="enter_your_gender">Введите свой гендер…</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_name_hint">Введите своё имя…</string>
    <string name="name_label">Как тебя называть? \n Другие пользователи будут видеть твоё имя!</string>
    <string name="birth_label">Укажи свою дату рождения :)</string>
    <string name="select_label">Выбрать</string>
    <string name="avatar_label">Добавь аватарку!) Люди чаще обращают внимание на профили с фото!</string>
    <string name="password_label">Осталось чуть-чуть! Добавь пароль для безопасности</string>
    <string name="password_hint">Придумайте пароль…</string>
    <string name="password_enter_hint">Введите пароль…</string>
    <string name="enter_your_name">Введите своё имя!</string>
    <string name="create_password_toast">Придумайте пароль!</string>
    <string name="enter_gender_toast">Введите свой гендер!</string>
    <string name="enter_mail_label">Введите почту…</string>
    <string name="reg_mail_label">Регистрация по E-mail</string>
    <string name="reg_auth">Зарегистрироваться</string>
    <string name="you_not_18_years_old_toast">Вам нет 18-ти лет!</string>
    <string name="def_ex_name">Иван Бёрнов</string>
    <string name="def_ex_label">Гетеросексуал</string>
    <string name="search_option">Поиск</string>
    <string name="enter_message_hint">Введите сообщение</string>
    <string name="read_messages">Читает сообщения</string>
    <string name="recording_audio">Записывает аудио</string>
    <string name="typing_enum">Печатает</string>
    <string name="offline_enum">Оффлайн</string>
    <string name="online_enum">Онлайн</string>
    <string name="chat_menu_clear_chat">Очистить чат</string>
    <string name="delete_chat">Удалить чат</string>
    <string name="already_has_account_label">Уже есть аккаунт?</string>
    <string name="enter_label">Войти</string>
    <string name="login_in_account_email_label">Вход в аккаунт по E-mail</string>
    <string name="my_sympathies">Мои симпатии</string>
    <string name="exit_label">Выход</string>
    <string name="settings_label">Настройки профиля</string>
    <string name="my_profile">Мой профиль</string>
    <string name="symp_desc_label">Здесь вы можете видеть профили тех, \n кто вас лайкнул, а также написать \n или позвонить им.</string>
    <string name="my_simp_label">Мои симпатии</string>
    <string name="reboot_label">Перезагрузить</string>
    <string name="chat_cleared">чат очищен!</string>
    <string name="chat_deleted">Чат удалён!</string>
    <string name="full_name_label">Полное имя</string>
    <string name="phone_number_label">Номер телефона</string>
    <string name="status_label">Статус</string>
    <string name="about_label">Инфо о себе</string>
    <string name="enter_msg_hint">Введите сообщение…</string>
    <string name="send_msg_label">Написать</string>
    <string name="info_label">Информация</string>
</resources>