<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/mainBackColor"
    tools:context=".views.reg_auth.EmailRegFragment">

    <TextView
        android:id="@+id/reg_email_label"
        android:fontFamily="@font/balsamiq_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp"
        android:layout_margin="@dimen/_20sdp"
        android:text="@string/reg_mail_label" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:id="@+id/email_layout"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_email_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/balsamiq_regular"
            android:hint="@string/enter_mail_label" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        app:errorEnabled="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:fontFamily="@font/balsamiq_regular"
            android:hint="@string/password_enter_hint" />

    </com.google.android.material.textfield.TextInputLayout>

        <TextView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reg_btn"
            android:id="@+id/toggle_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Вернуться к регистрации"
            android:layout_gravity="top"
            android:gravity="center"
            android:layout_marginTop="@dimen/_60sdp"
            android:background="@drawable/text_back"
            android:fontFamily="@font/balsamiq_bold"
            android:textSize="@dimen/_20ssp"
            android:padding="@dimen/_10sdp" />

    <TextView
        android:id="@+id/reg_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg_auth"
        app:layout_constraintTop_toBottomOf="@id/text_password_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/_20sdp"
        android:fontFamily="@font/balsamiq_bold"
        android:textSize="@dimen/_15ssp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/text_back" />

</androidx.constraintlayout.widget.ConstraintLayout>