<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackColor"
    tools:context=".views.reg_auth.GenderFragment">

    <!--    <com.scwang.wave.MultiWaveHeader-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        android:id="@+id/wave_header"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="@dimen/_100sdp" />-->

    <LinearLayout
        android:id="@+id/indicator"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/hello_label"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:background="@drawable/item_step"
            app:layout_constraintStart_toStartOf="@id/hello_label"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <TextView
        android:id="@+id/hello_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:fontFamily="@font/balsamiq_bold"
        android:gravity="center"
        android:text="@string/hello_label"
        android:textColor="@color/white"
        android:textSize="@dimen/_25ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/indicator" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/gender_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hello_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/gender_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:fontFamily="@font/balsamiq_regular"
            android:hint="@string/enter_your_gender" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/card_text_back"
        android:padding="@dimen/_23sdp"
        app:layout_constraintTop_toBottomOf="@id/gender_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

    <TextView
        android:id="@+id/registered_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/already_has_account_label"
        app:layout_constraintTop_toBottomOf="@id/gender_layout"
        android:textColor="@color/mainBackColor"
        android:fontFamily="@font/balsamiq_regular"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="center"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/registered_label"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/text_back"
        android:fontFamily="@font/balsamiq_bold"
        android:textSize="@dimen/_20ssp"
        android:padding="@dimen/_10sdp" />

    </LinearLayout>


    <ImageView
        android:id="@+id/btn_next"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_30sdp"
        android:background="@drawable/fab_shape"
        android:padding="@dimen/_10sdp"
        android:scaleType="fitCenter"
        android:src="@drawable/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>