<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackColor"
    tools:context=".views.main.ProfileFragment">

    <TextView
        android:id="@+id/my_profile_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_profile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:textColor="@color/white"
        android:fontFamily="@font/balsamiq_bold"
        android:textSize="@dimen/_25ssp" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/log_out_btn"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:padding="@dimen/_10sdp"
        android:src="@drawable/ic_log_out"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="@id/my_profile_label"
        app:riv_corner_radius="@dimen/_10sdp" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/profile_img"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:src="@drawable/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_profile_label"
        android:layout_marginStart="@dimen/_20sdp"
        app:riv_corner_radius="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp" />

    <TextView
        android:id="@+id/name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="IVAN BERNOV"
        app:layout_constraintStart_toEndOf="@id/profile_img"
        android:fontFamily="@font/balsamiq_regular"
        app:layout_constraintTop_toTopOf="@id/profile_img"
        android:layout_marginStart="@dimen/_10sdp"
        android:textSize="@dimen/_15ssp"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/gender_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/profile_img"
        app:layout_constraintTop_toBottomOf="@id/name_tv"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:textSize="@dimen/_15ssp"
        android:fontFamily="@font/balsamiq_regular"
        android:text="АГЕНДЕР"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/status_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/profile_img"
        app:layout_constraintTop_toBottomOf="@id/gender_tv"
        app:layout_constraintBottom_toTopOf="@id/simp_label_tv"
        android:gravity="center"
        android:layout_marginTop="@dimen/_15sdp"
        android:textSize="@dimen/_15ssp"
        android:fontFamily="@font/balsamiq_regular"
        android:text="Статус: Я креативный мой:"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/send_msg_btn"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/send_msg_label"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/status_tv"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/balsamiq_bold"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/simp_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/profile_img"
        app:layout_constraintTop_toBottomOf="@id/status_tv"
        android:layout_marginTop="@dimen/_15sdp"
        android:textSize="@dimen/_15ssp"
        android:fontFamily="@font/balsamiq_bold"
        android:text="@string/my_sympathies"
        android:textColor="@color/white" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/symp_btn"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:padding="@dimen/_10sdp"
        android:src="@drawable/ic_next"
        app:tint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/status_tv"
        android:layout_marginTop="10dp"
        app:riv_corner_radius="@dimen/_10sdp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/preview_recycler"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/simp_label_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/small_main_list_item" />

    <TextView
        android:id="@+id/settings_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/profile_img"
        app:layout_constraintTop_toBottomOf="@id/preview_recycler"
        android:layout_marginTop="@dimen/_15sdp"
        android:textSize="@dimen/_15ssp"
        android:fontFamily="@font/balsamiq_bold"
        android:text="@string/settings_label"
        android:textColor="@color/white" />

    <ImageView
        android:id="@+id/settings_btn"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toTopOf="@id/settings_label_tv"
        app:layout_constraintBottom_toBottomOf="@id/settings_label_tv"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/settings"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/info_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/profile_img"
        app:layout_constraintTop_toBottomOf="@id/settings_label_tv"
        android:layout_marginTop="@dimen/_15sdp"
        android:textSize="@dimen/_15ssp"
        android:fontFamily="@font/balsamiq_bold"
        android:text="@string/info_label"
        android:textColor="@color/white" />


</androidx.constraintlayout.widget.ConstraintLayout>