<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackColor"
    tools:context=".views.main.profile.AccountInfoFragment">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/user_photo_ava"
            android:layout_width="@dimen/fr_account_info_ava_width"
            android:layout_height="@dimen/fr_account_info_ava_height"
            android:layout_marginStart="@dimen/medium_app_m"
            android:layout_marginTop="@dimen/app_m"
            android:src="@drawable/profile" />

        <TextView
            android:id="@+id/profile_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/balsamiq_bold"
            android:text="Профиль Ivan Bernov"
            android:textColor="@color/white"
            android:textSize="@dimen/_25ssp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="350dp"
        android:layout_height="500dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:elevation="@dimen/_10sdp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear">

        <TextView
            android:id="@+id/user_full_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/balsamiq_regular"
            android:text="@string/full_name_label"
            android:textColor="@color/ef_grey"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/user_full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20sdp"
            android:text="Ivan Bernov"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"
            android:fontFamily="@font/balsamiq_bold"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/user_full_name_label" />

        <TextView
            android:id="@+id/user_phone_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/phone_number_label"
            android:textColor="@color/ef_grey"
            android:fontFamily="@font/balsamiq_regular"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/user_full_name_label"
            app:layout_constraintTop_toBottomOf="@id/user_full_name_label" />

        <TextView
            android:id="@+id/user_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20sdp"
            android:text="89253458193"
            android:textColor="@color/white"
            android:fontFamily="@font/balsamiq_bold"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/user_phone_label" />

        <TextView
            android:id="@+id/user_status_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/status_label"
            android:textColor="@color/ef_grey"
            android:fontFamily="@font/balsamiq_regular"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/user_phone_label"
            app:layout_constraintTop_toBottomOf="@id/user_phone_label" />

        <TextView
            android:id="@+id/user_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fr_account_info_m_start"
            android:layout_marginEnd="@dimen/_20sdp"
            android:text="Онлайн"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/user_status_label" />

        <TextView
            android:id="@+id/user_about_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/about_label"
            android:textColor="@color/ef_grey"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            android:fontFamily="@font/balsamiq_regular"
            app:layout_constraintStart_toStartOf="@id/user_status_label"
            app:layout_constraintTop_toBottomOf="@id/user_status_label" />

        <TextView
            android:id="@+id/user_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fr_account_info_m_start"
            android:layout_marginEnd="@dimen/_20sdp"
            android:ellipsize="end"
            android:text="Разработчик"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            android:fontFamily="@font/balsamiq_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/user_about_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>